--- a/index.html
+++ b/index.html
@@ -11,98 +11,143 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
-  <title>Home</title>
+  <title>HOME | EngineeringShed</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3816705524"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3808999779" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=445041713"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=220178320"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=525212404" id="pagesheet"/>
+  <!-- Other scripts -->
+  <script type="text/javascript">
+   var __adobewebfontsappname__ = "muse";
+</script>
   <!-- JS includes -->
+  <script src="https://webfonts.creativecloud.com/open-sans-condensed:n7:default;gentium-book-basic:n4:default.js" type="text/javascript" async></script>
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
-   </head>
+    <!--HTML Widget code-->
+  
+			<!--[if gte IE 8] -->
+				<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+			<!-- <![endif]-->
+			<!--[if IE 7]>
+				<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome-ie7.min.css" rel="stylesheet">
+			<![endif]-->
+			<style>
+				.icon-block:before, .icon-block {
+					display: block;
+				}
+			</style>
+		
+ </head>
  <body>
 
-  <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clip_frame grpelem" id="u273" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.9272,M12=0.3746,M21=-0.3746,M22=0.9272,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-16" data-mu-ie-matrix-dy="-16"><!-- image -->
-    <img class="block" id="u273_img" src="images/water_turbine_edited.jpg?crc=4111751510" alt="" data-image-width="104" data-image-height="104"/>
-   </div>
-   <div class="SlideShowWidget clearfix HeroFillFrame grpelem" id="slideshowu1852"><!-- none box -->
-    &nbsp;
-    <div class="popup_anchor" id="u1867popup">
-     <div class="SlideShowContentPanel clearfix fullscreen" id="u1867"><!-- stack box -->
-      <div class="SSSlide clip_frame fullscreen" id="u1868"><!-- image -->
-       <img class="ImageInclude" id="u1868_img" data-src="images/gpb_circling_earth.jpg?crc=207366422" src="images/blank.gif?crc=4208392903" alt="" data-width="960" data-height="720"/>
-      </div>
-      <div class="SSSlide invi clip_frame fullscreen" id="u1966"><!-- image -->
-       <img class="ImageInclude" id="u1966_img" data-src="images/space.jpg?crc=4195812039" src="images/blank.gif?crc=4208392903" alt="" data-width="960" data-height="600"/>
+  <div class="clearfix borderbox" id="page"><!-- column -->
+   <div class="position_content" id="page_position_content">
+    <div class="clearfix colelem" id="pu647"><!-- group -->
+     <div class="browser_width grpelem" id="u647-bw">
+      <div id="u647"><!-- group -->
+       <div class="clearfix" id="u647_align_to_page">
+        <a class="nonblock nontext MuseLinkActive clip_frame grpelem" id="u1622" href="index.html"><!-- image --><img class="block" id="u1622_img" src="images/mylogo.png?crc=145200896" alt="" data-image-width="229" data-image-height="51"/></a>
+       </div>
       </div>
      </div>
+     <a class="nonblock nontext clip_frame grpelem" id="u1615" href="http://translate.google.com/translate?js=n&amp;sl=auto&amp;tl=sq&amp;text=ABOUT"><!-- image --><img class="block" id="u1615_img" src="images/flag_of_albaniasvg-crop-u1615.png?crc=194127717" alt="" title="Gjuhe Shqipe" data-image-width="54" data-image-height="34"/></a>
     </div>
-    <div class="popup_anchor" id="u1853-4popup">
-     <div class="SSPreviousButton clearfix" id="u1853-4"><!-- content -->
-      <p><span id="u1853">&lt;</span></p>
+    <div class="clearfix colelem" id="pu1653"><!-- group -->
+     <div class="clip_frame grpelem" id="u1653"><!-- image -->
+      <img class="block" id="u1653_img" src="images/2-three%20phase.gif?crc=42461420" alt="" data-image-width="211" data-image-height="91"/>
+     </div>
+     <div class="clearfix grpelem" id="pu3387-6"><!-- column -->
+      <div class="heading clearfix colelem" id="u3387-6"><!-- content -->
+       <h1>&nbsp;<span id="u3387-2">Engineering</span><span id="u3387-3">Shed</span></h1>
+      </div>
+      <div class="subhead-serif clearfix colelem" id="u3388-4"><!-- content -->
+       <h3>make your project a breeze!</h3>
+      </div>
      </div>
     </div>
-    <div class="popup_anchor" id="u1856-4popup">
-     <div class="SSNextButton clearfix" id="u1856-4"><!-- content -->
-      <p>&gt;</p>
+    <div class="clearfix colelem" id="u3390"><!-- group -->
+     <div class="clearfix grpelem" id="u3392"><!-- group -->
+      <div class="grpelem" id="u3394"><!-- simple frame --></div>
+      <div class="grpelem" id="u3393"><!-- simple frame --></div>
+     </div>
+     <div class="clearfix grpelem" id="u3391-4"><!-- content -->
+      <p>✧✧</p>
      </div>
     </div>
-    <div class="popup_anchor" id="u1857-4popup">
-     <div class="SlideShowLabel SSSlideCount clearfix" id="u1857-4"><!-- content -->
-      <p><span id="u1857">2 - 2</span></p>
-     </div>
+    <div class="clearfix colelem" id="u3389-6"><!-- content -->
+     <h2 class="subhead" id="u3389-2">Substation Testing &amp; Commissioning</h2>
+     <p class="body" id="u3389-4">EngineeringShed is a freelance business and was founded in 2008 under the name of DriniElektrik&nbsp; to fulfilling the need of the construction industry.&nbsp; It has since evolved, advanced, restructured and is now more dedicated to substation testing &amp; commissioning of switch gear and protection schemes performing design, installations, testing and commissioning through to project energization and handover.&nbsp; Our 16 + years experience with oil &amp; gas, solar and wind farms, factories, data centres and the utilities is a guarantee for project success.&nbsp; We are happy to help.&nbsp; Give us a buzz and see how easy the work shall fly!</p>
     </div>
-   </div>
-   <div class="clearfix grpelem" id="pu1493"><!-- column -->
-    <div class="size_fixed colelem" id="u1493"><!-- custom html -->
-     
-<a href="https://twitter.com/pellumbbara" class="twitter-follow-button" data-lang="en" data-show-screen-name="true" data-size="medium"></a>
-
-    </div>
-    <nav class="MenuBar clearfix colelem" id="menuu142"><!-- horizontal box -->
-     <div class="MenuItemContainer borderbox clearfix grpelem" id="u143"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox clearfix colelem" id="u146" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u149-4"><!-- content --><p>Home</p></div></a>
+    <div class="verticalspacer" data-offset-top="566" data-content-above-spacer="566" data-content-below-spacer="167"></div>
+    <nav class="MenuBar clearfix colelem" id="menuu982"><!-- horizontal box -->
+     <div class="MenuItemContainer borderbox clearfix grpelem" id="u990"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox clearfix colelem" id="u991" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u993-4"><!-- content --><p>HOME</p></div></a>
      </div>
-     <div class="MenuItemContainer borderbox clearfix grpelem" id="u150"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u153" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u156-4"><!-- content --><p>About</p></div></a>
+     <div class="MenuItemContainer borderbox clearfix grpelem" id="u983"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u984" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u985-4"><!-- content --><p>ABOUT</p></div></a>
      </div>
-     <div class="MenuItemContainer borderbox clearfix grpelem" id="u188"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u189" href="services.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u191-4"><!-- content --><p>Services</p></div></a>
+     <div class="MenuItemContainer borderbox clearfix grpelem" id="u997"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u998" href="projects.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1000-4"><!-- content --><p>PROJECTS</p></div></a>
      </div>
-     <div class="MenuItemContainer borderbox clearfix grpelem" id="u217"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u220" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u223-4"><!-- content --><p>Contact</p></div></a>
+     <div class="MenuItemContainer borderbox clearfix grpelem" id="u1011"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1012" href="blog.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1013-4"><!-- content --><p>BLOG</p></div></a>
      </div>
-     <div class="MenuItemContainer borderbox clearfix grpelem" id="u245"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u248" href="projects.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u249-4"><!-- content --><p>Projects</p></div></a>
+     <div class="MenuItemContainer borderbox clearfix grpelem" id="u1004"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1005" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1007-4"><!-- content --><p>CONTACT</p></div></a>
      </div>
     </nav>
+    <div class="clearfix colelem" id="pu422-3"><!-- group -->
+     <div class="browser_width grpelem" id="u422-3-bw">
+      <div class="clearfix" id="u422-3"><!-- content -->
+       <p>&nbsp;</p>
+      </div>
+     </div>
+     <nav class="MenuBar clearfix grpelem" id="menuu155"><!-- horizontal box -->
+      <div class="MenuItemContainer borderbox clearfix grpelem" id="u156"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox clearfix colelem" id="u159" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u162-4"><!-- content --><p>HOME</p></div></a>
+      </div>
+      <div class="MenuItemContainer borderbox clearfix grpelem" id="u163"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u166" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u169-4"><!-- content --><p>ABOUT</p></div></a>
+      </div>
+      <div class="MenuItemContainer borderbox clearfix grpelem" id="u201"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u202" href="projects.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u204-4"><!-- content --><p>PROJECTS</p></div></a>
+      </div>
+      <div class="MenuItemContainer borderbox clearfix grpelem" id="u230"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u231" href="blog.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u234-4"><!-- content --><p>BLOG</p></div></a>
+      </div>
+      <div class="MenuItemContainer borderbox clearfix grpelem" id="u258"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u259" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u261-4"><!-- content --><p>CONTACT</p></div></a>
+      </div>
+     </nav>
+     <div class="clearfix grpelem" id="u3897"><!-- group -->
+      <a class="nonblock nontext size_fixed grpelem" id="u3899" href="https://www.facebook.com/pellumbbara" target="_blank"><!-- custom html --><i class="icon-facebook icon-block" style="line-height:29px;"></i></a>
+      <div class="size_fixed grpelem" id="u3898"><!-- custom html -->
+       <i class="icon-linux icon-block" style="line-height:29px;"></i>
+      </div>
+      <a class="nonblock nontext size_fixed grpelem" id="u3901" href="https://twitter.com/PellumbBara" target="_blank"><!-- custom html --><i class="icon-twitter icon-block" style="line-height:29px;"></i></a>
+      <a class="nonblock nontext size_fixed grpelem" id="u3900" href="http://www.pellumbara.cf" target="_blank"><!-- custom html --><i class="icon-instagram icon-block" style="line-height:29px;"></i></a>
+     </div>
+    </div>
    </div>
-   <div class="verticalspacer" data-offset-top="105" data-content-above-spacer="120" data-content-below-spacer="395"></div>
   </div>
-  <!-- JS includes -->
-  <script type="text/javascript">
-   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn2.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
-</script>
-  <script type="text/javascript">
-   window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js?crc=209076791" type="text/javascript">\x3C/script>');
-</script>
   <!-- Other scripts -->
   <script type="text/javascript">
    window.Muse.assets.check=function(d){if(!window.Muse.assets.checked){window.Muse.assets.checked=!0;var b={},c=function(a,b){if(window.getComputedStyle){var c=window.getComputedStyle(a,null);return c&&c.getPropertyValue(b)||c&&c[b]||""}if(document.documentElement.currentStyle)return(c=a.currentStyle)&&c[b]||a.style&&a.style[b]||"";return""},a=function(a){if(a.match(/^rgb/))return a=a.replace(/\s+/g,"").match(/([\d\,]+)/gi)[0].split(","),(parseInt(a[0])<<16)+(parseInt(a[1])<<8)+parseInt(a[2]);if(a.match(/^\#/))return parseInt(a.substr(1),
 16);return 0},g=function(g){for(var f=document.getElementsByTagName("link"),h=0;h<f.length;h++)if("text/css"==f[h].type){var i=(f[h].href||"").match(/\/?css\/([\w\-]+\.css)\?crc=(\d+)/);if(!i||!i[1]||!i[2])break;b[i[1]]=i[2]}f=document.createElement("div");f.className="version";f.style.cssText="display:none; width:1px; height:1px;";document.getElementsByTagName("body")[0].appendChild(f);for(h=0;h<Muse.assets.required.length;){var i=Muse.assets.required[h],l=i.match(/([\w\-\.]+)\.(\w+)$/),k=l&&l[1]?
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.musemenu","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","jquery.musemenu"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
+Muse.Utils.resizeHeight('.browser_width');/* resize height */
+Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.fullPage('#page');/* 100% height page */
-Muse.Utils.initWidget('#slideshowu1852', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:true,displayInterval:3500,slideLinkStopsSlideShow:false,transitionStyle:'horizontal',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'fullScreen',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu1852 */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
@@ -111,10 +156,5 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 </script>
   <!-- RequireJS script -->
   <script src="scripts/require.js?crc=4234670167" type="text/javascript" async data-main="scripts/museconfig.js?crc=4152223963" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
-  
-  <!--HTML Widget code-->
-  
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
    </body>
 </html>
