--- a/about.html
+++ b/about.html
@@ -11,76 +11,169 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "about.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "about.css"], "outOfDate":[]};
 </script>
   
-  <title>About</title>
+  <title>ABOUT | EngineeringShed</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3816705524"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=249096385" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=445041713"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=220178320"/>
+  <link rel="stylesheet" type="text/css" href="css/master_interior.css?crc=4093034961"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=4242746746" id="pagesheet"/>
+  <!-- Other scripts -->
+  <script type="text/javascript">
+   var __adobewebfontsappname__ = "muse";
+</script>
   <!-- JS includes -->
+  <script src="https://webfonts.creativecloud.com/open-sans-condensed:n7:default;gentium-book-basic:n4:default.js" type="text/javascript" async></script>
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
-   </head>
+    <!--HTML Widget code-->
+  
+			<!--[if gte IE 8] -->
+				<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+			<!-- <![endif]-->
+			<!--[if IE 7]>
+				<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome-ie7.min.css" rel="stylesheet">
+			<![endif]-->
+			<style>
+				.icon-block:before, .icon-block {
+					display: block;
+				}
+			</style>
+		
+ </head>
  <body>
 
-  <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clip_frame grpelem" id="u273" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.9272,M12=0.3746,M21=-0.3746,M22=0.9272,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-16" data-mu-ie-matrix-dy="-16"><!-- image -->
-    <img class="block" id="u273_img" src="images/water_turbine_edited.jpg?crc=4111751510" alt="" data-image-width="104" data-image-height="104"/>
-   </div>
-   <div class="clearfix grpelem" id="pu1493"><!-- column -->
-    <div class="size_fixed colelem" id="u1493"><!-- custom html -->
-     
-<a href="https://twitter.com/pellumbbara" class="twitter-follow-button" data-lang="en" data-show-screen-name="true" data-size="medium"></a>
+  <div class="clearfix borderbox" id="page"><!-- column -->
+   <div class="position_content" id="page_position_content">
+    <div class="clearfix colelem" id="pu298"><!-- group -->
+     <div class="browser_width grpelem" id="u298-bw">
+      <div id="u298"><!-- group -->
+       <div class="clearfix" id="u298_align_to_page">
+        <a class="nonblock nontext clip_frame grpelem" id="u304" href="index.html"><!-- image --><img class="block" id="u304_img" src="images/mylogo.png?crc=145200896" alt="" data-image-width="229" data-image-height="51"/></a>
+        <div class="clearfix grpelem" id="ppmenuu1090"><!-- column -->
+         <div class="clearfix colelem" id="pmenuu1090"><!-- group -->
+          <nav class="MenuBar clearfix grpelem" id="menuu1090"><!-- horizontal box -->
+           <div class="MenuItemContainer borderbox clearfix grpelem" id="u1112"><!-- vertical box -->
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1113" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1115-4"><!-- content --><p>HOME</p></div></a>
+           </div>
+           <div class="MenuItemContainer borderbox clearfix grpelem" id="u1119"><!-- vertical box -->
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox clearfix colelem" id="u1122" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1124-4"><!-- content --><p>ABOUT</p></div><div class="borderbox grpelem" id="u1123"><!-- content --></div></a>
+            <div class="SubMenu MenuLevel1 borderbox clearfix" id="u1120"><!-- vertical box -->
+             <ul class="SubMenuView borderbox clearfix colelem" id="u1121"><!-- vertical box -->
+              <li class="MenuItemContainer borderbox clearfix colelem" id="u4710"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u4712" href="services.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u4716-4"><!-- content --><div id="u4716-3"><p>SERVICES</p></div></div></a></li>
+             </ul>
+            </div>
+           </div>
+           <div class="MenuItemContainer borderbox clearfix grpelem" id="u1105"><!-- vertical box -->
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1106" href="projects.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1107-4"><!-- content --><p>PROJECTS</p></div></a>
+           </div>
+           <div class="MenuItemContainer borderbox clearfix grpelem" id="u1098"><!-- vertical box -->
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1099" href="blog.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1102-4"><!-- content --><p>BLOG</p></div></a>
+           </div>
+           <div class="MenuItemContainer borderbox clearfix grpelem" id="u1091"><!-- vertical box -->
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1092" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1095-4"><!-- content --><p>CONTACT</p></div></a>
+           </div>
+          </nav>
+          <div class="clearfix grpelem" id="u4308-3"><!-- content -->
+           <p>&nbsp;</p>
+          </div>
+         </div>
+         <div class="size_fixed colelem" id="u1597"><!-- custom html -->
+          
+<a href="https://twitter.com/share" class="twitter-share-button" data-count="true" data-lang="en" data-url="www.adobe.com/products/muse.html" data-size="medium" data-text="Shall get back in no time! " data-related="pellumbbara"></a>
 
+         </div>
+        </div>
+       </div>
+      </div>
+     </div>
+     <a class="nonblock nontext clip_frame grpelem" id="u1382" href="blog.html"><!-- image --><img class="block" id="u1382_img" src="images/flag_of_albaniasvg.png?crc=3956120208" alt="" title="Gjuhe Shqipe" data-image-width="48" data-image-height="34"/></a>
+     <div class="clearfix grpelem" id="u1605-3"><!-- content -->
+      <p>&nbsp;</p>
+     </div>
     </div>
-    <nav class="MenuBar clearfix colelem" id="menuu142"><!-- horizontal box -->
-     <div class="MenuItemContainer borderbox clearfix grpelem" id="u143"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u146" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u149-4"><!-- content --><p>Home</p></div></a>
+    <div class="heading clearfix colelem" id="u3920-7"><!-- content -->
+     <h1><span id="u3920">Welcome to</span> <span id="u3920-3">Engineering</span><span id="u3920-4">Shed</span></h1>
+    </div>
+    <div class="subhead-serif clearfix colelem" id="u3921-4"><!-- content -->
+     <h3>A small freelance engineering business in Diber,</h3>
+    </div>
+    <div class="clearfix colelem" id="ppu3925"><!-- group -->
+     <div class="clearfix grpelem" id="pu3925"><!-- column -->
+      <div class="clearfix colelem" id="u3925"><!-- group -->
+       <div class="clearfix grpelem" id="u3927"><!-- group -->
+        <div class="grpelem" id="u3928"><!-- simple frame --></div>
+        <div class="grpelem" id="u3929"><!-- simple frame --></div>
+       </div>
+       <div class="clearfix grpelem" id="u3926-4"><!-- content -->
+        <p>✧✧</p>
+       </div>
+      </div>
+      <div class="clearfix colelem" id="u3922-7"><!-- content -->
+       <h2 class="subhead" id="u3922-2">Design</h2>
+       <p class="body" id="u3922-4">Components, Protective Relays, Relaying Basics, Primary &amp; Backup Relaying, CT's &amp; PT's, Protective Elements, Phase TOC IOC,Coordination, Directionality, Autoreclose</p>
+       <p class="body">&nbsp;</p>
+      </div>
      </div>
-     <div class="MenuItemContainer borderbox clearfix grpelem" id="u150"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox clearfix colelem" id="u153" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u156-4"><!-- content --><p>About</p></div></a>
+     <div class="clip_frame grpelem" id="u4435"><!-- image -->
+      <img class="block" id="u4435_img" src="images/pencil-crop-u4435.png?crc=3944750190" alt="" data-image-width="60" data-image-height="46"/>
      </div>
-     <div class="MenuItemContainer borderbox clearfix grpelem" id="u188"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u189" href="services.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u191-4"><!-- content --><p>Services</p></div></a>
+     <div class="clearfix grpelem" id="u3923-8"><!-- content -->
+      <h2 class="subhead" id="u3923-2">Installation</h2>
+      <p class="body" id="u3923-4">Case Capacity, Terminal Block, Power Supply,CT/VT Wiring,CT Characteristics, Digital I/O, Circuit Monitor, IRIG-B, Wiring - CT/VT Wiring, Transformers, Switchgear, Cabling, Feeders, Earthing mesh, Battery Rooms.</p>
+      <p class="body">&nbsp;</p>
+      <p class="body">&nbsp;</p>
      </div>
-     <div class="MenuItemContainer borderbox clearfix grpelem" id="u217"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u220" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u223-4"><!-- content --><p>Contact</p></div></a>
+     <div class="clip_frame grpelem" id="u4450"><!-- image -->
+      <img class="block" id="u4450_img" src="images/wrench-20-icon-270x250.png?crc=3768068821" alt="" data-image-width="50" data-image-height="46"/>
      </div>
-     <div class="MenuItemContainer borderbox clearfix grpelem" id="u245"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u248" href="projects.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u249-4"><!-- content --><p>Projects</p></div></a>
+     <div class="clearfix grpelem" id="u3924-10"><!-- content -->
+      <h2 class="subhead"><span id="u3924">T</span><span id="u3924-2">esting &amp; Commissioning</span><span id="u3924-3"></span></h2>
+      <p class="body" id="u3924-6">Coordination, TOC Pickup, TOC, Multiplier, TOC Grading, Unit Quantities, Directionality, Neutral Definite,OC, Synchronizer, HV Switchgear Testing, Cable Testing, Transformer Testing, Scada, LV panels.</p>
+      <h2 class="subhead">&nbsp;</h2>
+      <p class="body">&nbsp;</p>
      </div>
-    </nav>
-    <div class="clearfix colelem" id="pu1060-39"><!-- group -->
-     <div class="clearfix grpelem" id="u1060-39"><!-- content -->
-      <p>Our company has global projects experience in power substation testing &amp; commissioning, and systems. We have vast experience with oil &amp; gas, solar &amp; wind farms,&nbsp; utilities,data centres and the rail industry.</p>
-      <p>Engineeringshed can perform FAT, SAT, Commissioning tests for power systems of 11 kV, 33kV,&nbsp; &amp;&amp;13.8kV, 34.5kV Maintenance statutory testing for 11 &amp; 33kV substations, switchgear testing and upgrades and other HV work.</p>
-      <p>and protection scheme testing.</p>
-      <p>Switchgear testing including:</p>
-      <p>-&nbsp; Perform insulation Resistance Tests on Each Bus Section</p>
-      <p>-&nbsp; Perform high pot HV switchgear tests</p>
-      <p>-&nbsp; Perform Phasing Checks on double ended switchgear to</p>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ensure correct phasing from each source</p>
-      <p>-&nbsp; Energization of power substations up to 110kV</p>
-      <p>-&nbsp; Protection Schemes, CT, VT, phasing, substation earthing.</p>
-      <p>&nbsp;- G59 application &amp; commissioning.&nbsp; DNO applications, EPC</p>
-      <p>&nbsp;</p>
-      <p>Following Up...</p>
-      <p>Upon completion of testing and commissioning we shall show by demonstration in service test that switchgear is performing the intended function - HV Circuit breakers shall be tripped by operation of each protective device.</p>
-      <p>Please note that we are authorised and regulated for high voltage work and posses the necessary engineering <a class="nonblock" href="projects.html" target="_blank" title="subscribe to gain acess to our documents"><span id="u1060-29">licence</span></a><span id="u1060-31"> </span>for such works.</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
+     <div class="clip_frame grpelem" id="u4443"><!-- image -->
+      <img class="block" id="u4443_img" src="images/images.jpg?crc=156095368" alt="" data-image-width="77" data-image-height="58"/>
      </div>
-     <div class="clearfix grpelem" id="u1110-3"><!-- content -->
-      <p>&nbsp;</p>
+    </div>
+    <div class="verticalspacer" data-offset-top="592" data-content-above-spacer="591" data-content-below-spacer="167"></div>
+    <div class="clearfix colelem" id="pu422-3"><!-- group -->
+     <div class="browser_width grpelem" id="u422-3-bw">
+      <div class="clearfix" id="u422-3"><!-- content -->
+       <p>&nbsp;</p>
+      </div>
+     </div>
+     <nav class="MenuBar clearfix grpelem" id="menuu155"><!-- horizontal box -->
+      <div class="MenuItemContainer borderbox clearfix grpelem" id="u156"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u159" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u162-4"><!-- content --><p>HOME</p></div></a>
+      </div>
+      <div class="MenuItemContainer borderbox clearfix grpelem" id="u163"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox clearfix colelem" id="u166" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u169-4"><!-- content --><p>ABOUT</p></div></a>
+      </div>
+      <div class="MenuItemContainer borderbox clearfix grpelem" id="u201"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u202" href="projects.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u204-4"><!-- content --><p>PROJECTS</p></div></a>
+      </div>
+      <div class="MenuItemContainer borderbox clearfix grpelem" id="u230"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u231" href="blog.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u234-4"><!-- content --><p>BLOG</p></div></a>
+      </div>
+      <div class="MenuItemContainer borderbox clearfix grpelem" id="u258"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u259" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u261-4"><!-- content --><p>CONTACT</p></div></a>
+      </div>
+     </nav>
+     <div class="clearfix grpelem" id="u3897"><!-- group -->
+      <a class="nonblock nontext size_fixed grpelem" id="u3899" href="https://www.facebook.com/pellumbbara" target="_blank"><!-- custom html --><i class="icon-facebook icon-block" style="line-height:29px;"></i></a>
+      <div class="size_fixed grpelem" id="u3898"><!-- custom html -->
+       <i class="icon-linux icon-block" style="line-height:29px;"></i>
+      </div>
+      <a class="nonblock nontext size_fixed grpelem" id="u3901" href="https://twitter.com/PellumbBara" target="_blank"><!-- custom html --><i class="icon-twitter icon-block" style="line-height:29px;"></i></a>
+      <a class="nonblock nontext size_fixed grpelem" id="u3900" href="http://www.pellumbara.cf" target="_blank"><!-- custom html --><i class="icon-instagram icon-block" style="line-height:29px;"></i></a>
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="572" data-content-above-spacer="572" data-content-below-spacer="62"></div>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
@@ -99,6 +192,8 @@ var muse_init=function(){require.config({baseUrl:""});require(["jquery","museuti
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
+Muse.Utils.resizeHeight('.browser_width');/* resize height */
+Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
 Muse.Utils.showWidgetsWhenReady();/* body */
