--- a/blog.html
+++ b/blog.html
@@ -11,15 +11,15 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "projects.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "blog.css"], "outOfDate":[]};
 </script>
   
-  <title>PROJECTS | EngineeringShed</title>
+  <title>BLOG | EngineeringShed</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=445041713"/>
   <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=220178320"/>
   <link rel="stylesheet" type="text/css" href="css/master_interior.css?crc=4093034961"/>
-  <link rel="stylesheet" type="text/css" href="css/projects.css?crc=4080893818" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/blog.css?crc=4158356430" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -61,10 +61,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           </div>
          </div>
          <div class="MenuItemContainer borderbox clearfix grpelem" id="u1105"><!-- vertical box -->
-          <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox clearfix colelem" id="u1106" href="projects.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1107-4"><!-- content --><p>PROJECTS</p></div></a>
+          <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1106" href="projects.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1107-4"><!-- content --><p>PROJECTS</p></div></a>
          </div>
          <div class="MenuItemContainer borderbox clearfix grpelem" id="u1098"><!-- vertical box -->
-          <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1099" href="blog.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1102-4"><!-- content --><p>BLOG</p></div></a>
+          <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox clearfix colelem" id="u1099" href="blog.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1102-4"><!-- content --><p>BLOG</p></div></a>
          </div>
          <div class="MenuItemContainer borderbox clearfix grpelem" id="u1091"><!-- vertical box -->
           <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1092" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1095-4"><!-- content --><p>CONTACT</p></div></a>
@@ -79,117 +79,82 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="SlideShowWidget clearfix colelem" id="slideshowu2717"><!-- none box -->
-     <div class="popup_anchor" id="u2730popup">
-      <div class="SlideShowContentPanel clearfix" id="u2730"><!-- stack box -->
-       <div class="SSSlide clip_frame grpelem" id="u2731"><!-- image -->
-        <img class="block ImageInclude" id="u2731_img" data-src="images/20160923_100901_li-crop-u2731.jpg?crc=4132079760" src="images/blank.gif?crc=4208392903" alt="" data-width="480" data-height="360"/>
+    <div class="PamphletWidget clearfix colelem" id="pamphletu1797"><!-- none box -->
+     <div class="ThumbGroup clearfix grpelem" id="u1811"><!-- none box -->
+      <div class="popup_anchor" id="u1812popup">
+       <div class="Thumb popup_element clearfix" id="u1812"><!-- group -->
+        <div class="clearfix grpelem" id="u1813-4"><!-- content -->
+         <p>1</p>
+        </div>
        </div>
-       <div class="SSSlide invi clip_frame grpelem" id="u2923"><!-- image -->
-        <img class="block ImageInclude" id="u2923_img" data-src="images/20150422_151039-crop-u2923.jpg?crc=1321137" src="images/blank.gif?crc=4208392903" alt="" data-width="480" data-height="360"/>
+      </div>
+      <div class="popup_anchor" id="u1816popup">
+       <div class="Thumb popup_element clearfix" id="u1816"><!-- group -->
+        <div class="clearfix grpelem" id="u1817-4"><!-- content -->
+         <p>2</p>
+        </div>
        </div>
-       <div class="SSSlide invi clip_frame grpelem" id="u2949"><!-- image -->
-        <img class="block ImageInclude" id="u2949_img" data-src="images/20150519_103013-crop-u2949.jpg?crc=4234740242" src="images/blank.gif?crc=4208392903" alt="" data-width="480" data-height="360"/>
+      </div>
+      <div class="popup_anchor" id="u1814popup">
+       <div class="Thumb popup_element clearfix" id="u1814"><!-- group -->
+        <div class="clearfix grpelem" id="u1815-4"><!-- content -->
+         <p>3</p>
+        </div>
        </div>
-       <div class="SSSlide invi clip_frame grpelem" id="u2975"><!-- image -->
-        <img class="block ImageInclude" id="u2975_img" data-src="images/20150521_130007_richtone(hdr)-crop-u2975.jpg?crc=354080832" src="images/blank.gif?crc=4208392903" alt="" data-width="480" data-height="360"/>
+      </div>
+      <div class="popup_anchor" id="u3304popup">
+       <div class="Thumb popup_element clearfix" id="u3304"><!-- group -->
+        <div class="clearfix grpelem" id="u3366-4"><!-- content -->
+         <p>4</p>
+        </div>
        </div>
-       <div class="SSSlide invi clip_frame grpelem" id="u3001"><!-- image -->
-        <img class="block ImageInclude" id="u3001_img" data-src="images/20150521_130016_richtone(hdr)-crop-u3001.jpg?crc=3939158299" src="images/blank.gif?crc=4208392903" alt="" data-width="480" data-height="360"/>
-       </div>
-       <div class="SSSlide invi clip_frame grpelem" id="u3027"><!-- image -->
-        <img class="block ImageInclude" id="u3027_img" data-src="images/20150918_112134-crop-u3027.jpg?crc=4001437362" src="images/blank.gif?crc=4208392903" alt="" data-width="480" data-height="360"/>
-       </div>
-       <div class="SSSlide invi clip_frame grpelem" id="u3053"><!-- image -->
-        <img class="block ImageInclude" id="u3053_img" data-src="images/20150923_095303-crop-u3053.jpg?crc=523016930" src="images/blank.gif?crc=4208392903" alt="" data-width="480" data-height="360"/>
-       </div>
-       <div class="SSSlide invi clip_frame grpelem" id="u3079"><!-- image -->
-        <img class="block ImageInclude" id="u3079_img" data-src="images/20160519_120949-crop-u3079.jpg?crc=513376935" src="images/blank.gif?crc=4208392903" alt="" data-width="480" data-height="360"/>
-       </div>
-       <div class="SSSlide invi clip_frame grpelem" id="u3105"><!-- image -->
-        <img class="block ImageInclude" id="u3105_img" data-src="images/thethi-shkoder_001.jpg?crc=267630622" src="images/blank.gif?crc=4208392903" alt="" data-width="400" data-height="258"/>
-       </div>
-       <div class="SSSlide invi clip_frame clearfix grpelem" id="u3131"><!-- image -->
-        <img class="ImageInclude position_content" id="u3131_img" data-src="images/lura-lakes-albania.jpg?crc=232788374" src="images/blank.gif?crc=4208392903" alt="" data-width="500" data-height="350"/>
-       </div>
-       <div class="SSSlide invi clip_frame grpelem" id="u3157"><!-- image -->
-        <img class="block ImageInclude" id="u3157_img" data-src="images/foto-primare1-crop-u3157.jpg?crc=4121099332" src="images/blank.gif?crc=4208392903" alt="" data-width="480" data-height="360"/>
-       </div>
-       <div class="SSSlide invi clip_frame grpelem" id="u3183"><!-- image -->
-        <img class="block ImageInclude" id="u3183_img" data-src="images/foto-primare1%20(1)-crop-u3183.jpg?crc=4121099332" src="images/blank.gif?crc=4208392903" alt="" data-width="480" data-height="360"/>
-       </div>
-       <div class="SSSlide invi clip_frame grpelem" id="u3209"><!-- image -->
-        <img class="block ImageInclude" id="u3209_img" data-src="images/12146-crop-u3209.jpg?crc=3771362397" src="images/blank.gif?crc=4208392903" alt="" data-width="480" data-height="360"/>
+      </div>
+      <div class="popup_anchor" id="u3335popup">
+       <div class="Thumb popup_element clearfix" id="u3335"><!-- group -->
+        <div class="clearfix grpelem" id="u3369-4"><!-- content -->
+         <p>5</p>
+        </div>
        </div>
       </div>
      </div>
-     <div class="popup_anchor" id="u2739popup">
-      <div class="SlideShowCaptionPanel clearfix" id="u2739"><!-- stack box -->
-       <div class="SSSlideCaption clearfix grpelem" id="u2741-4"><!-- content -->
-        <p>Some of our oldest test kit</p>
+     <div class="popup_anchor" id="u1798popup">
+      <div class="ContainerGroup clearfix" id="u1798"><!-- stack box -->
+       <div class="Container clearfix grpelem" id="u1799"><!-- group -->
+        <div class="clip_frame grpelem" id="u1800"><!-- image -->
+         <img class="block" id="u1800_img" src="images/img-20150519-wa0002-crop-u1800.jpg?crc=4179838292" alt="" data-image-width="620" data-image-height="400"/>
+        </div>
        </div>
-       <div class="SSSlideCaption invi clearfix grpelem" id="u2939-4"><!-- content -->
-        <p>Oil &amp; Gas Project</p>
+       <div class="Container invi clearfix grpelem" id="u1803"><!-- group -->
+        <div class="clip_frame grpelem" id="u1805"><!-- image -->
+         <img class="block" id="u1805_img" src="images/sheshi_skenderbej%20_old-crop-u1805.jpg?crc=4138858707" alt="" data-image-width="620" data-image-height="400"/>
+        </div>
        </div>
-       <div class="SSSlideCaption invi clearfix grpelem" id="u2965-4"><!-- content -->
-        <p>Protection Scheme Testing &amp; Commissioning</p>
+       <div class="Container invi clearfix grpelem" id="u1807"><!-- group -->
+        <div class="clip_frame grpelem" id="u1808"><!-- image -->
+         <img class="block" id="u1808_img" src="images/december_movement_1990-crop-u1808.jpg?crc=478486188" alt="" data-image-width="620" data-image-height="400"/>
+        </div>
        </div>
-       <div class="SSSlideCaption invi clearfix grpelem" id="u2991-4"><!-- content -->
-        <p>Brush Transformers Installation</p>
+       <div class="Container invi clearfix grpelem" id="u3311"><!-- group -->
+        <div class="clip_frame grpelem" id="u3322"><!-- image -->
+         <img class="block" id="u3322_img" src="images/20150610_205807614x346.jpg?crc=4041899051" alt="" data-image-width="614" data-image-height="345"/>
+        </div>
        </div>
-       <div class="SSSlideCaption invi clearfix grpelem" id="u3017-4"><!-- content -->
-        <p>110kV / 34.5kV Transformers Installation</p>
+       <div class="Container invi clearfix grpelem" id="u3340"><!-- group -->
+        <div class="clip_frame grpelem" id="u3351"><!-- image -->
+         <img class="block" id="u3351_img" src="images/20161002_175132.jpg?crc=4169822118" alt="" data-image-width="226" data-image-height="402"/>
+        </div>
        </div>
-       <div class="SSSlideCaption invi clearfix grpelem" id="u3043-4"><!-- content -->
-        <p>Some of our Relay Testing Instrument</p>
-       </div>
-       <div class="SSSlideCaption invi clearfix grpelem" id="u3069-4"><!-- content -->
-        <p>Another Relay Test Kit</p>
-       </div>
-       <div class="SSSlideCaption invi clearfix grpelem" id="u3095-4"><!-- content -->
-        <p>No Comment :)</p>
-       </div>
-       <div class="SSSlideCaption invi clearfix grpelem" id="u3121-4"><!-- content -->
-        <p>My birth place!</p>
-       </div>
-       <div class="SSSlideCaption invi clearfix grpelem" id="u3147-4"><!-- content -->
-        <p>Picture from my countryside ...a lake nearby</p>
-       </div>
-       <div class="SSSlideCaption invi clearfix grpelem" id="u3173-4"><!-- content -->
-        <p>Another lake from the same place!</p>
-       </div>
-       <div class="SSSlideCaption invi clearfix grpelem" id="u3199-4"><!-- content -->
-        <p>No Comment</p>
-       </div>
-       <div class="SSSlideCaption invi clearfix grpelem" id="u3225-4"><!-- content -->
-        <p>A stream in Albania.</p>
-       </div>
-      </div>
-     </div>
-     <div class="popup_anchor" id="u2729-4popup">
-      <div class="SlideShowLabel SSSlideCount clearfix" id="u2729-4"><!-- content -->
-       <p><span id="u2729">13 - 13</span></p>
-      </div>
-     </div>
-     <div class="popup_anchor" id="u2725-4popup">
-      <div class="SSPreviousButton clearfix" id="u2725-4"><!-- content -->
-       <p><span id="u2725">&lt;</span></p>
-      </div>
-     </div>
-     <div class="popup_anchor" id="u2727-4popup">
-      <div class="SSNextButton clearfix" id="u2727-4"><!-- content -->
-       <p>&gt;</p>
       </div>
      </div>
     </div>
    </div>
    <div class="clearfix grpelem" id="pu1382"><!-- group -->
-    <a class="nonblock nontext clip_frame grpelem" id="u1382" href="blog.html"><!-- image --><img class="block" id="u1382_img" src="images/flag_of_albaniasvg.png?crc=3956120208" alt="" title="Gjuhe Shqipe" data-image-width="48" data-image-height="34"/></a>
+    <a class="nonblock nontext MuseLinkActive clip_frame grpelem" id="u1382" href="blog.html"><!-- image --><img class="block" id="u1382_img" src="images/flag_of_albaniasvg.png?crc=3956120208" alt="" title="Gjuhe Shqipe" data-image-width="48" data-image-height="34"/></a>
     <div class="clearfix grpelem" id="u1605-3"><!-- content -->
      <p>&nbsp;</p>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="512" data-content-above-spacer="512" data-content-below-spacer="166"></div>
+   <div class="verticalspacer" data-offset-top="590" data-content-above-spacer="589" data-content-below-spacer="166"></div>
    <div class="clearfix grpelem" id="pu422-3"><!-- group -->
     <div class="browser_width grpelem" id="u422-3-bw">
      <div class="clearfix" id="u422-3"><!-- content -->
@@ -204,10 +169,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u166" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u169-4"><!-- content --><p>ABOUT</p></div></a>
      </div>
      <div class="MenuItemContainer borderbox clearfix grpelem" id="u201"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox clearfix colelem" id="u202" href="projects.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u204-4"><!-- content --><p>PROJECTS</p></div></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u202" href="projects.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u204-4"><!-- content --><p>PROJECTS</p></div></a>
      </div>
      <div class="MenuItemContainer borderbox clearfix grpelem" id="u230"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u231" href="blog.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u234-4"><!-- content --><p>BLOG</p></div></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox clearfix colelem" id="u231" href="blog.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u234-4"><!-- content --><p>BLOG</p></div></a>
      </div>
      <div class="MenuItemContainer borderbox clearfix grpelem" id="u258"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u259" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u261-4"><!-- content --><p>CONTACT</p></div></a>
@@ -244,7 +209,7 @@ Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
-Muse.Utils.initWidget('#slideshowu2717', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:true,displayInterval:3500,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'off',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu2717 */
+Muse.Utils.initWidget('#pamphletu1797', ['#bp_infinity'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'none',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:false,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu1797 */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
