--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "about.css"], "outOfDate":[]};
 </script>
   
-  <title>ABOUT | EngineeringShed</title>
+  <title>ABOUT | Engineering</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=445041713"/>
   <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=220178320"/>
@@ -96,10 +96,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="heading clearfix colelem" id="u3920-7"><!-- content -->
-     <h1><span id="u3920">Welcome to</span> <span id="u3920-3">Engineering</span><span id="u3920-4">Shed</span></h1>
+     <h1><span id="u3920">Welcome to</span> <span id="u3920-3">Engineering</span><span id="u3920-4"></span></h1>
     </div>
     <div class="subhead-serif clearfix colelem" id="u3921-4"><!-- content -->
-     <h3>A small freelance engineering business in Diber,</h3>
+     <h3>...</h3>
     </div>
     <div class="clearfix colelem" id="ppu3925"><!-- group -->
      <div class="clearfix grpelem" id="pu3925"><!-- column -->
