--- a/blog.html
+++ b/blog.html
@@ -121,7 +121,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="ContainerGroup clearfix" id="u1798"><!-- stack box -->
        <div class="Container clearfix grpelem" id="u1799"><!-- group -->
         <div class="clip_frame grpelem" id="u1800"><!-- image -->
-         <img class="block" id="u1800_img" src="images/img-20150519-wa0002-crop-u1800.jpg?crc=4179838292" alt="" data-image-width="620" data-image-height="400"/>
+         <img class="block" id="u1800_img" src="images/" alt="&nbsp;" data-image-width="620" data-image-height="400"/>
         </div>
        </div>
        <div class="Container invi clearfix grpelem" id="u1803"><!-- group -->
@@ -131,17 +131,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
        <div class="Container invi clearfix grpelem" id="u1807"><!-- group -->
         <div class="clip_frame grpelem" id="u1808"><!-- image -->
-         <img class="block" id="u1808_img" src="images/december_movement_1990-crop-u1808.jpg?crc=478486188" alt="" data-image-width="620" data-image-height="400"/>
+         <img class="block" id="u1808_img" src="images/" alt="&nbrs;" data-image-width="620" data-image-height="400"/>
         </div>
        </div>
        <div class="Container invi clearfix grpelem" id="u3311"><!-- group -->
         <div class="clip_frame grpelem" id="u3322"><!-- image -->
-         <img class="block" id="u3322_img" src="images/20150610_205807614x346.jpg?crc=4041899051" alt="" data-image-width="614" data-image-height="345"/>
+         <img class="block" id="u3322_img" src="images/?" alt="&nbsp" data-image-width="614" data-image-height="345"/>
         </div>
        </div>
        <div class="Container invi clearfix grpelem" id="u3340"><!-- group -->
         <div class="clip_frame grpelem" id="u3351"><!-- image -->
-         <img class="block" id="u3351_img" src="images/20161002_175132.jpg?crc=4169822118" alt="" data-image-width="226" data-image-height="402"/>
+         <img class="block" id="u3351_img" src="images/?" alt="&nbsp;" data-image-width="226" data-image-height="402"/>
         </div>
        </div>
       </div>
@@ -149,7 +149,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
    </div>
    <div class="clearfix grpelem" id="pu1382"><!-- group -->
-    <a class="nonblock nontext MuseLinkActive clip_frame grpelem" id="u1382" href="blog.html"><!-- image --><img class="block" id="u1382_img" src="images/flag_of_albaniasvg.png?crc=3956120208" alt="" title="Gjuhe Shqipe" data-image-width="48" data-image-height="34"/></a>
+    <a class="nonblock nontext MuseLinkActive clip_frame grpelem" id="u1382" href="blog.html"><!-- image --><img class="block" id="u1382_img" src="images/" alt="&nbsp;" title="Gjuhe Shqipe" data-image-width="48" data-image-height="34"/></a>
     <div class="clearfix grpelem" id="u1605-3"><!-- content -->
      <p>&nbsp;</p>
     </div>
