--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "webpro.js", "contact.css"], "outOfDate":[]};
 </script>
   
-  <title>CONTACT | EngineeringShed</title>
+  <title>CONTACT | US</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=445041713"/>
   <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=220178320"/>
@@ -115,7 +115,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix colelem" id="pu4227-11"><!-- group -->
      <div class="clearfix grpelem" id="u4227-11"><!-- content -->
-      <h2 class="subhead" id="u4227-2">Enginering Workshop &amp; Training</h2>
+      <h2 class="subhead" id="u4227-2">&nbsp; &amp; Training</h2>
       <h2 class="subhead" id="u4227-3">&nbsp;</h2>
       <h2 class="subhead" id="u4227-5">-----------------------------------------------------</h2>
       <p class="body" id="u4227-9">Monday - Friday&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 06:00 - 22:00<br/>Saturday - Sunday&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 07:00 - 22:00</p>
