--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <div class="clearfix grpelem" id="pu3387-6"><!-- column -->
       <div class="heading clearfix colelem" id="u3387-6"><!-- content -->
-       <h1>&nbsp;<span id="u3387-2">Engineering</span><span id="u3387-3">Shed</span></h1>
+       <h1>&nbsp;<span id="u3387-2">&nbsp;</span><span id="u3387-3">&nbsp;</span></h1>
       </div>
       <div class="subhead-serif clearfix colelem" id="u3388-4"><!-- content -->
-       <h3>make your project a breeze!</h3>
+       <h3>make stuff! </h3>
       </div>
      </div>
     </div>
@@ -81,7 +81,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix colelem" id="u3389-6"><!-- content -->
      <h2 class="subhead" id="u3389-2">Substation Testing &amp; Commissioning</h2>
-     <p class="body" id="u3389-4">EngineeringShed is a freelance business and was founded in 2008 under the name of DriniElektrik&nbsp; to fulfilling the need of the construction industry.&nbsp; It has since evolved, advanced, restructured and is now more dedicated to substation testing &amp; commissioning of switch gear and protection schemes performing design, installations, testing and commissioning through to project energization and handover.&nbsp; Our 16 + years experience with oil &amp; gas, solar and wind farms, factories, data centres and the utilities is a guarantee for project success.&nbsp; We are happy to help.&nbsp; Give us a buzz and see how easy the work shall fly!</p>
+     <p class="body" id="u3389-4">&nbsp;</p>
     </div>
     <div class="verticalspacer" data-offset-top="566" data-content-above-spacer="566" data-content-below-spacer="167"></div>
     <nav class="MenuBar clearfix colelem" id="menuu982"><!-- horizontal box -->
